15-Cert Manager & External DNS/external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.15.1
          args:
            - --source=service 
            - --source=ingress 
            - --domain-filter=diarabaka.com 
            - --zone-id-filter= 
            - --provider=cloudflare
            - --cloudflare-proxied 
            - --txt-prefix=k8s-cfitech
