15-Cert Manager & External DNS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: cfitech
  annotations:
    external-dns.alpha.kubernetes.io/target: diarabaka.com
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cfitech.diarabaka.com
    secretName: cfitech-tls-ingress
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              name: http
    host: cfitech.diarabaka.com
